# PythonCLI

./: README.md  pyproject.toml
pythoncli/: archive_view.py  dedupe_lines.py  pcli_test.py
